# ipyannotator

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .zenodo.json  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  Makefile  README.html  README.md  conf.py  dev_notes.html  dev_notes.md  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  search.html  searchindex.js  settings.ini  setup.py  start_lab.sh  test_nbs.py  voila.Dockerfile
.github/actions/docker-image-tag/: action.yaml
.github/workflows/: docs_pages.yaml  initi.yaml  release.yaml
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  README.md.txt  index.rst.txt
_sources/docs/: tutorials.rst.txt
_sources/nbs/: 00_base.ipynb.txt  00a_annotator.ipynb.txt  00b_mltypes.ipynb.txt  00c_annotation_types.ipynb.txt  00d_doc_utils.ipynb.txt  01_bbox_canvas.ipynb.txt  01_helpers.ipynb.txt  01a_datasets.ipynb.txt  01a_datasets_download.ipynb.txt  01a_datasets_factory.ipynb.txt  01b_dataset_video.ipynb.txt  01b_tutorial_image_classification.ipynb.txt  01c_tutorial_bbox.ipynb.txt  01d_tutorial_video_annotator.ipynb.txt  02_navi_widget.ipynb.txt  02a_right_menu_widget.ipynb.txt  02b_grid_menu.ipynb.txt  03_storage.ipynb.txt  04_bbox_annotator.ipynb.txt  05_image_button.ipynb.txt  06_capture_annotator.ipynb.txt  07_im2im_annotator.ipynb.txt  08_tutorial_road_damage.ipynb.txt  09_voila_example.ipynb.txt  12_debug_utils.ipynb.txt  13_datasets_legacy.ipynb.txt  14_datasets_factory_legacy.ipynb.txt  15_coordinates_input.ipynb.txt  16_custom_buttons.ipynb.txt  17_annotator_explorer.ipynb.txt  18_bbox_trajectory.ipynb.txt  19_bbox_video_annotator.ipynb.txt  21_api_doc.ipynb.txt  22_input_output_doc.ipynb.txt  index.ipynb.txt
_templates/: layout.html
data/projects/capture1/results/: annotations.csv
docs/: _config.yml  design.html  design.rst  internal-components.html  internal-components.rst  sidebar.json  tutorials.html  tutorials.rst
docs/_templates/: copyright.html
ipyannotator/: _nbdev.py  annotator.py  base.py  bbox_annotator.py  bbox_canvas.py  bbox_video_annotator.py  capture_annotator.py  debug_utils.py  doc_utils.py  explore_annotator.py  helpers.py  im2im_annotator.py  image_button.py  mltypes.py  navi_widget.py  right_menu_widget.py  storage.py
ipyannotator/common/: settings.py
ipyannotator/custom_input/: buttons.py  coordinates.py
ipyannotator/custom_widgets/: grid_menu.py
ipyannotator/datasets/: download.py  factory.py  factory_legacy.py  generators.py  generators_legacy.py
ipyannotator/docs/: api.py  input_output.py  utils.py
ipyannotator/ipytyping/: annotations.py
ipyannotator/services/: bbox_trajectory.py
nbs/: 00_base.html  00_base.ipynb  00a_annotator.html  00a_annotator.ipynb  00b_mltypes.html  00b_mltypes.ipynb  00c_annotation_types.html  00c_annotation_types.ipynb  00d_doc_utils.html  00d_doc_utils.ipynb  01_bbox_canvas.html  01_bbox_canvas.ipynb  01_helpers.html  01_helpers.ipynb  01a_datasets.html  01a_datasets.ipynb  01a_datasets_download.html  01a_datasets_download.ipynb  01a_datasets_factory.html  01a_datasets_factory.ipynb  01b_dataset_video.html  01b_dataset_video.ipynb  01b_tutorial_image_classification.html  01b_tutorial_image_classification.ipynb  01c_tutorial_bbox.html  01c_tutorial_bbox.ipynb  01d_tutorial_video_annotator.html  01d_tutorial_video_annotator.ipynb  02_navi_widget.html  02_navi_widget.ipynb  02a_right_menu_widget.html  02a_right_menu_widget.ipynb  02b_grid_menu.html  02b_grid_menu.ipynb  03_storage.html  03_storage.ipynb  04_bbox_annotator.html  04_bbox_annotator.ipynb  04_multi_bbox_annotator.ipynb  05_image_button.html  (+38 more)
paper/: paper.bib  paper.md
scripts/: build_whl.sh  check_clean_nb.sh  check_lib_diff.sh  check_lint.sh  test_nb.sh
(+1 files in other folders)
